platform/gitops/components/networking/hubble/base/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  host: hubble-ui.kube-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
